--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Reem+Kufi:wght@400;500;600;700&display=swap");
+
+s body {
+  font-family: "Poppins", sans-serif;
+  font-family: "Reem Kufi", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.container {
+  margin: 0 auto;
   }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  height: 72px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav ul {
+  display: flex;
+  justify-content: space-evenly ;
+  list-style: none;
+  gap: 24px;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --red: #d01c28;
+  --gray: #5a5959;
+}
+
+button {
+  all: unset;
+  background: var(--red);
+  padding: 6px 16px;
+  height: 32px;
+  color: white;
+  font-weight: 500px;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  height: calc(100vh - 72px);
+}
+
+.hero-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.hero h1 {
+  font-weight: 1000;
+  line-height: 90px;
+  font-size: 90px;
+  margin: 0px;
+  margin-bottom: 8px;
+  padding: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hero p {
+  font-weight: 600;
+  color: var(--gray);
+  max-width: 400px;
+}
+
+.hero-btn {
+  display: flex;
+  gap: 40px;
+}
+
+.sec-btn {
+  margin: 0px;
+  background: transparent;
+  color: var(--red);
+  border: 2px solid gray;
+  font-weight: 600;
+}
+
+.shopping p {
+  margin: 2px;
+  font-size: 14px;
+}
+
+.brand-icons {
+  display: flex;
+  gap: 10px;
 }
